# parakeet

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: conda.yml  docker-publish.yml  python-build.yml  python-package.yml  python-publish.yml  quay-io-publish.yml  singularity-publish.yml  snapcraft.yml  sphinx.yml
amplus/: analyse.py  beam.py  config.py  futures.py  inelastic.py  landau.py  sample.py  simulation.py
amplus/command_line/: __init__.py  analyse.py  config.py  simulate.py
amplus/freeze/: freeze_ext.cc
conda/: build.sh  environment.yaml  meta.yaml
conda-constructor/: construct.yaml
docs/: Makefile  api.html  configuration.html  genindex.html  index.html  installation.html  objects.inv  publications.html  search.html  searchindex.js  tutorial.html  usage.html
docs/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  publications.rst.txt  tutorial.rst.txt
docs/_static/: documentation_options.js
docs/source/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  tutorial.rst  usage.rst
docs/source/ext/: pydantic_settings.py
newsfragments/: 32.feature  39.feature  44.doc  45.bugfix  50.feature  51.feature  56.feature  57.feature  61.feature
scripts/: snap_command_aliases.sh
snap/: snapcraft.yaml
src/amplus/: analyse.py  config.py  detector.py  dqe.py  error.h  futures.py  inelastic.py  io.py  lens.py  microscope.py  sample.py  sample_old.py  scan.py  simulation.py
src/amplus/command_line/: __init__.py  analyse.py  config.py  sample.py  simulate.py
src/amplus/data/: __init__.py
src/amplus/freeze/: __init__.py  freeze_ext.cc  sphere_packer.h
src/amplus/util/: calibrate_ice_model.py  compute_ice_noise_filter.py
src/elfantasma/: beam.py  command_line.py  config.py  detector.py  dqe.py  freeze.py  futures.py  io.py  lens.py  microscope.py  sample.py  scan.py  simulate.py  simulation.py
src/elfantasma/command_line/: __init__.py  sample.py  simulate.py
src/elfantasma/data/: 4v1w.cif  6z6u.pdb.tmp  __init__.py  water.cif
src/elfantasma/freeze/: __init__.py  sphere_packer.h
src/parakeet/: __init__.py  _run.py  analyse.py  beam.py  config.py  detector.py  dqe.py  error.h  futures.py  inelastic.py  io.py  landau.py  lens.py  metadata.py  microscope.py  pose.py  sample.py  scan.py  simulation.py
src/parakeet/analyse/: __init__.py  _average_particles.py  _correct.py  _extract.py  _reconstruct.py  _refine.py  average_particles.py  correct.py  extract.py  reconstruct.py  refine.py
src/parakeet/command_line/: __init__.py  _export.py  _main.py  _read_pdb.py  _run.py  analyse.py  config.py  export.py  read_pdb.py  sample.py  simulate.py
src/parakeet/command_line/analyse/: __init__.py  _average_all_particles.py  _average_extracted_particles.py  _average_particles.py  _correct.py  _extract.py  _reconstruct.py  _refine.py  average_all_particles.py  average_particles.py  correct.py  extract.py  reconstruct.py  refine.py
src/parakeet/command_line/config/: __init__.py  _edit.py  _new.py  _show.py  edit.py  new.py  show.py
src/parakeet/command_line/metadata/: __init__.py  _export.py
src/parakeet/command_line/pdb/: __init__.py  _get.py  _read.py
src/parakeet/command_line/sample/: __init__.py  _add_molecules.py  _mill.py  _new.py  _show.py  _sputter.py  add_molecules.py  mill.py  new.py  show.py  sputter.py
src/parakeet/command_line/simulate/: __init__.py  _cbed.py  _ctf.py  _exit_wave.py  _image.py  _optics.py  _potential.py  _projected_potential.py  _simple.py  config.yaml  ctf.py  exit_wave.py  image.py  optics.py  projected_potential.py  simple.py
src/parakeet/data/: __init__.py
src/parakeet/freeze/: __init__.py  freeze_ext.cc  sphere_packer.h
src/parakeet/sample/: __init__.py  _add_molecules.py  _mill.py  _new.py  _sputter.py  add_molecules.py  distribute.py  mill.py  motion.py  new.py  sputter.py
src/parakeet/simulate/: __init__.py  _cbed.py  _ctf.py  _exit_wave.py  _image.py  _optics.py  _potential.py  _projected_potential.py  _simple.py  ctf.py  engine.py  exit_wave.py  image.py  optics.py  phase_plate.py  projected_potential.py  simple.py  simulation.py
src/parakeet/util/: calibrate_ice_model.py
tests/: test_amplus.py  test_beam.py  test_command_line.py  test_config.py  test_inelastic.py  test_io.py  test_landau.py  test_sample.py  test_sample_distribute.py  test_scan.py  test_slice.py  test_sphere_packer.py
