[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "cmake", "ninja", "wheel", "dask", "pytest-runner"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/parakeet/_version.py"

[tool.towncrier]
package = "parakeet"
package_dir = "src"
filename = "CHANGES.rst"
directory = "newsfragments"

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true
follow_imports = "skip"

plugins = [
  "pydantic.mypy"
]
